# cowsay

./: Cargo.toml  README.md  wasmer.toml
src/: main.rs
