[package]
name = "cowsay"
version = "0.1.0"
authors = ["Syrus Akbary <syrus@wasmer.io>"]

[dependencies]
clap = "2.33.3"
rand = "0.8.5"
include_dir = "0.6.0"
wee_alloc = "0.4.5"

[profile.release]
lto = "fat"
opt-level = "s"
codegen-units = 1

# [[bin]]
# name = "cowsay"
# path = "src/main.rs"

# [[bin]]
# name = "cowthink"
# path = "src/main.rs"

# [source]
# [source.same-file]
# directory = "./same-file"
